[tool.poetry]
name = "PROJECT-SLUG"
version = "0.1.0"
description = "PROJECT-SLUG is a Python package for dealing with XXXXXXXXXXXX."
readme = "README.md"
authors = ["Wesley Batista"]
license = "MIT"
repository = "https://github.com/WesleyBatista/PROJECT-SLUG"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
# PROJECT-SLUG = "PROJECT_FOLDER.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
